        don't automatically daemonize pfsetvlan
          (http://www.packetfence.org/mantis/view.php?id=336)
        pfsetvlan should clean its PID file
          (http://www.packetfence.org/mantis/view.php?id=337)
        pfsetvlan: A thread exited while 26 threads were running
          (http://www.packetfence.org/mantis/view.php?id=338)

1.7.0
        pid with spaces causes issues in web admin GUI
          (http://www.packetfence.org/mantis/view.php?id=315)
        replaced packetfence.gif with new packetfence.png logo
          be sure to update general.logo to /common/packetfence.png

1.7.0 RC4
        usage of gettext and template-toolkit in web pages
        pfcmd_vlan -reAssignVlan
          (https://support.inverse.ca/mantis/view.php?id=2341)
        replaced HTTP auth with form based authentication
        setVlan on Linksys switches
          (http://www.packetfence.org/mantis/view.php?id=307)
        added autodiscover script
        added sample iptables.pre configuration file to allow
          reception of SNMP traps
        show database and scan passwords in password fields in 
          web admin GUI
        fixed issue in node_cleanup SQL query
        added missing test/connect_and_read.pl script
        support for Cisco::WLC_2106

1.7.0 RC3
        setting configuration parameters back to default values
          (http://www.packetfence.org/mantis/view.php?id=313)
        = sign in configuration values
          (https://support.inverse.ca/mantis/view.php?id=2265)

1.7.0 RC2
        Some reports (Active/InActive) do not have DHCP fingerprint
          information (http://www.packetfence.org/mantis/view.php?id=4)
        pfcmd always connects to MySQL
          (http://www.packetfence.org/mantis/view.php?id=101)
        can't close blocks in administration/configuration.php
          (http://www.packetfence.org/mantis/view.php?id=122)
        admin/screenshots
          (http://www.packetfence.org/mantis/view.php?id=125)