@@ -179,7 +179,7 @@ EOT
 type=toggle
 options=enabled|disabled
 description=<<EOT
-If enabled, VLAN based isolation is used. You have to manually start the pfsetvlan service for this to work.
+If enabled, VLAN based isolation is used.
 EOT
 
 [proxies]
@@ -214,6 +214,12 @@ EOT
 type=text
 description=<<EOT
 Location of the pfdhcplistener daemon.  The default setting should be fine.
+EOT
+
+[services.pfsetvlan]
+type=text
+description=<<EOT
+Location of the pfsetvlan daemon.  The default setting should be fine.
 EOT
 
 [services.httpd]
