@@ -130,6 +130,7 @@ The Stinger utility could then be accessed at https://pfhostname/proxies/tools/s
   <a href='services.html#pfdhcplistener'>pfdhcplistener</a><br>
   <a href='services.html#pfmon'>pfmon</a><br>
   <a href='services.html#pfredirect'>pfredirect</a><br>
+  <a href='services.html#pfsetvlan'>pfsetvlan</a><br>
   <a href='services.html#snort'>snort</a><br>
 <p><b>[trapping]</b><br>
   <a href='trapping.html#blacklist'>blacklist</a><br>
