@@ -37,6 +37,10 @@ Location of the pfmon daemon.  The default setting should be fine.<p>
 <b>pfredirect</b> <i>(text)</i><br>
 Default: /usr/local/pf/bin/pfredirect<br>
 Location of the pfredirect daemon.  The default setting should be fine.<p>
+<a name=pfsetvlan></a>
+<b>pfsetvlan</b> <i>(text)</i><br>
+Default: /usr/local/pf/bin/pfsetvlan<br>
+Location of the pfsetvlan daemon.  The default setting should be fine.<p>
 <a name=snort></a>
 <b>snort</b> <i>(text)</i><br>
 Default: /usr/sbin/snort<br>
