@@ -40,6 +40,8 @@
           (http://www.packetfence.org/mantis/view.php?id=337)
         pfsetvlan: A thread exited while 26 threads were running
           (http://www.packetfence.org/mantis/view.php?id=338)
+        start pfsetvlan when network.vlan=enabled
+          (http://www.packetfence.org/mantis/view.php?id=252)
 
 1.7.0
         pid with spaces causes issues in web admin GUI
